Refactor HabitCard component to support pending reasons for missed habits. Enhanced user experience by allowing users to provide reasons for missed habits, updated styles for better visual consistency, and integrated theme colors throughout the component. Updated app navigation to include a new screen for sharing missed habit reasons. Adjusted habit data structure to accommodate new fields for pending reasons and miss reasons.

--- a/app.json
+++ b/app.json
@@ -29,10 +29,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-notifications"],
-    "notification": {
-      "icon": "./assets/notification-icon.png",
-      "color": "#4F46E5"
-    }
+    "plugins": ["expo-notifications"]
   }
 }
