--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-  "java.compile.nullAnalysis.mode": "automatic"
+  "java.compile.nullAnalysis.mode": "disabled",
+  "java.configuration.detectJdksAtStart": false,
+  "java.import.gradle.enabled": false,
+  "java.project.sourcePaths": [],
+  "java.project.outputPath": "",
+  "files.exclude": {
+    "**/node_modules/**": true,
+    "**/.git/**": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true
+  },
+  "java.import.exclusions": [
+    "**/node_modules/**",
+    "**/.metadata/**",
+    "**/archetype-resources/**",
+    "**/META-INF/maven/**"
+  ],
+  "typescript.preferences.includePackageJsonAutoImports": "on",
+  "javascript.preferences.includePackageJsonAutoImports": "on",
+  "java.configuration.updateBuildConfiguration": "disabled"
 }
