--- a/app.json
+++ b/app.json
@@ -7,10 +7,11 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "jsEngine": "hermes",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#4F46E5"
+      "backgroundColor": "#243b53"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -20,14 +21,15 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#4F46E5"
+        "backgroundColor": "#243b53"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.pledge.habits",
       "permissions": ["NOTIFICATIONS", "SCHEDULE_EXACT_ALARM"]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "plugins": ["expo-notifications"]
   }
