Enhance app dependencies and UI components for improved functionality. Added 'react-native-picker-horizontal' and updated '@react-native-community/cli' in package dependencies. Refined HabitCard component to conditionally display status messages and improved navigation structure with SafeAreaProvider for better layout management. Updated styles for consistency and enhanced user experience across screens.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-picker-horizontal": "^0.1.2",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
