--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-picker-horizontal": "^0.1.2",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
